--- a/css/style.css
+++ b/css/style.css
@@ -394,7 +394,70 @@ a:active{
 	background-color: black;
 	color: white;
 }
+/*modal*/
 
+.modal{
+	width: 100%;
+	height: 100%;
+	overflow: auto; 
+	background-color: rgb(0,0,0); 
+	background-color: rgba(0,0,0,0.4);
+	position: fixed;
+	top: 0%;
+	left: 0%;
+	z-index: 6;
+}
+.modal-body{
+	background-color: white;
+	height: 100%;
+	width: 90%;
+	margin: auto;
+	position: relative;
+}
+
+.modal-body img{
+	width: 100%;
+	height: 100%;
+
+}
+
+#arrow-left, #arrow-right, #xmark{
+	position: absolute;
+	z-index: 7;
+	font-size: 3vw;
+	cursor: pointer;
+	color: white;
+}
+
+#arrow-left{
+	top: 49%;
+	left: 3%;
+}
+
+#arrow-right{
+	float: right;
+	top: 49%;
+	right: 3%;
+}
+
+#xmark{
+	float: right;
+	top: 3%;
+	right: 3%;
+}
+
+/*.fade-enter-active, .fade-leave-active {
+  transition: all 1s;
+}
+.fade-enter, .fade-leave-to  {
+  filter: blur(10px);
+  opacity: 0;
+}
+
+.fade-enter-to, .fade-leave {
+  /*filter: blur(1px);
+  opacity: 1;
+}*/
 
 /*media*/
 
